--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,91 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
+@patent{buttari:hal-04268862,
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  selected = {false},
+  abbr = {Patent},
+  TITLE = {{Method, computer program and device for quantizing a deep neural network}},
+  AUTHOR = {Beuzeville, Th{\'e}o and Buttari, Alfredo and  Gratton, Serge and Pralet, St{\'e}phane },
+  URL = {https://hal.science/hal-04268862},
+  NUMBER = {US 2023/0334301},
+  ADDRESS = {United States},
+  YEAR = {2023},
+  MONTH = Oct,
+  HAL_ID = {hal-04268862},
+  HAL_VERSION = {v1},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{beuzeville:hal-04663142,
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  selected = {true},
+  abbr = {Journal article},
+  TITLE = {{Deterministic and probabilistic rounding error analysis of neural networks in floating-point arithmetic}},
+  AUTHOR = {Beuzeville, Th{\'e}o and Buttari, Alfredo and Gratton, Serge and Mary, Theo},
+  URL = {https://hal.science/hal-04663142},
+  JOURNAL = {{IMA Journal of Numerical Analysis}},
+  PUBLISHER = {{Oxford University Press (OUP)}},
+  YEAR = {2025},
+  KEYWORDS = {rounding errors ; backward error ; probabilistic error analysis ; artificial neural networks ; error analysis ; floating-point arithmetic},
+  PDF = {https://hal.science/hal-04663142v2/file/rounding_error_analysis_nn.pdf},
+  HAL_ID = {hal-04663142},
+  HAL_VERSION = {v2},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
+@phdthesis{beuzeville:tel-04622129,
   bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  selected = {true},
+  abbr = {Thesis},
+  TITLE = {{Backward error analysis of artificial neural networks with applications to floating-point computations and adversarial attacks}},
+  AUTHOR = {Beuzeville, Th{\'e}o},
+  URL = {https://theses.hal.science/tel-04622129},
+  NUMBER = {2024TLSEP054},
+  SCHOOL = {{Universit{\'e} de Toulouse}},
+  YEAR = {2024},
+  MONTH = Jun,
+  KEYWORDS = {Backward error ; Rounding errors ; Adversarial attacks ; Error analysis ; Floating-point ; Artificial neural networks ; Erreur inverse ; Erreurs d'arrondi ; Attaques adverses ; Analyse d'erreur ; Virgule flottante ; R{\'e}seaux de neurones artificiels},
+  TYPE = {Theses},
+  PDF = {https://theses.hal.science/tel-04622129v1/file/BEUZEVILLE_Theo2024.pdf},
+  HAL_ID = {tel-04622129},
+  HAL_VERSION = {v1},
 }
 
-@book{przibram1967letters,
+@unpublished{beuzeville:hal-03296180,
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+  selected = {true},
+  abbr = {Technical report},
+  TITLE = {{Adversarial attacks via backward error analysis}},
+  AUTHOR = {Beuzeville, Th{\'e}o and Boudier, Pierre and Buttari, Alfredo and Gratton, Serge and Mary, Th{\'e}o and Pralet, St{\'e}phane},
+  URL = {https://ut3-toulouseinp.hal.science/hal-03296180},
+  YEAR = {2021},
+  MONTH = Dec,
+  PDF = {https://ut3-toulouseinp.hal.science/hal-03296180v3/file/Adversarial_BE.pdf},
+  HAL_ID = {hal-03296180},
+  HAL_VERSION = {v3},
+}
+
+@unpublished{beuzeville:hal-03752184,
+  bibtex_show={true},
+  selected = {false},
+  abbr = {Technical report},
+  TITLE = {{Adversarial attacks via Sequential Quadratic Programming}},
+  AUTHOR = {Beuzeville, Th{\'e}o and Buttari, Alfredo and Gratton, Serge and Mary, Theo and Ulker, Erkan},
+  URL = {https://hal.science/hal-03752184},
+  YEAR = {2022},
+  MONTH = Aug,
+  PDF = {https://hal.science/hal-03752184v1/file/Adversarial_attacks_via_Sequential_Quadratic_Programming.pdf},
+  HAL_ID = {hal-03752184},
+  HAL_VERSION = {v1},
+}
+
+@patent{beuzeville:hal-05219822,
+  bibtex_show={true},
+  selected = {false},
+  abbr = {Patent},
+  TITLE = {{Method for training an artificial intelligence model and associated computer program}},
+  AUTHOR = {Beuzeville, Th{\'e}o and Buttari, Alfredo and Gratton, Serge and Mary, Theo and Winckler, Nicolas},
+  URL = {https://hal.science/hal-05219822},
+  NUMBER = {US20250232224A1},
+  ADDRESS = {United States},
+  YEAR = {2025},
+  MONTH = Jul,
+  HAL_ID = {hal-05219822},
+  HAL_VERSION = {v1},
 }
