Addition of Teaching, CV and final details

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,6 +26,7 @@
   KEYWORDS = {rounding errors ; backward error ; probabilistic error analysis ; artificial neural networks ; error analysis ; floating-point arithmetic},
   PDF = {https://hal.science/hal-04663142v2/file/rounding_error_analysis_nn.pdf},
   HAL_ID = {hal-04663142},
+  NOTE = {In press},
   HAL_VERSION = {v2},
 }
 
